--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	padding: 0;
-	height: 100vh;
+	height: 100%;
 }
 
 .btext{
@@ -13,7 +13,7 @@ body
 	text-align: center;
 	top: 40%;
 	width: 100%;
-	line-height: 0.4em;
+	line-height: 0.4px;
 }
 
 h1{
