--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ body
 	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	padding: 0;
-	height: 100vh;
 }
 
 .btext{
@@ -20,8 +18,7 @@ h1{
 	font-size: 40px;
 }
 
-#particles-js
-{
+#particles-js{
 	height: 100%;
 	background: #252525;
 }
