--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
     border: none;
 }
 img:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    circle-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
 .btext{
