--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ h1{
 
 .btn:hover{
 	color: #b19295;
-	border: #fff 1px solid;
+	border: #008CBA 1px solid;
+	background-color: #008CBA
 }
 
 #particles-js{
