--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ h1{
 
 .btn:hover{
 	color: #b19295;
-	border: #008CBA 1px solid;
-	background-color: #008CBA
+	border: #eacc2c 1px solid;
 }
 
 #particles-js{
