--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ h1{
 }
 
 .btn:hover{
-	color: #ffd700;
-	border: #ffd700 1px solid;
+	color: #f9f5ae;
+	border: #f9f5ae 1px solid;
 }
 
 #particles-js{
